# innowise_laboratory

./: .gitignore
lecture_1/: main.py  pyproject.toml
lecture_2/: main.py
lecture_3/: main.py
lecture_4/: main.py  school.db  script.sql
lecture_5/: bookTable.db  main.py
lecture_6/: Dockerfile
lecture_6/codeBase/: main.py  schemas.py
