[project]
name = "lecture-1"
version = "0.1.0"
description = ""
authors = [
    {name = "watari1337",email = "alexboyip@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorama (>=0.4.6,<0.5.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
